--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
                         standard. Will definitely use them again and recommend them to everyone! "</p>
                 </div>
             </section>
+            <div class="attribution">
+                Challenge by
+                <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+                  >Frontend Mentor</a
+                >. Coded by <a href="#">Alex Cruz</a>.
+              </div>
         </div>
+       
     </body>
 </html>
