--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 Challenge by
                 <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
                   >Frontend Mentor</a
-                >. Coded by <a href="#">Alex Cruz</a>.
+                >. Coded by <a href="#">Alex </a>.
               </div>
         </div>
-       
+        
     </body>
 </html>
